# multi_agent_system

./: .gitignore  CODE_REVIEW_UPGRADES.md  MKDIR.md  WORKFLOW.md  ai_studio_code.txt  architecture_graph.md  pyproject.toml  requirements.txt  setup_project.py
src/: main.py
src/agents/: analyst.py  evaluator.py  researcher.py  supervisor.py
src/config/: settings.py
src/graph/: checkpoints.py  completion.py  state.py  workflow.py
src/modules/: responses.py
src/tools/: base.py  data_tools.py  registry.py  search_tools.py
src/utils/: groq_client.py  logger.py  memory.py  tracing.py
