[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-agent system with Groq + LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2",
    "langchain-groq>=0.1",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "*.tests", "tests.*"]
namespaces = false
